manifests/apps/entity/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: entity
  name: entity-service
  labels:
    app: entity-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: entity-service
  template:
    metadata:
      labels:
        app: entity-service
    spec:
      serviceaccount: entity-sa
      containers:
        - name: entity-service
          image: nginx:latest
          ports:
            - containerPort: 80
