manifests/apps/entity/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entity-service
spec:
  selector:
    app: entity-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
